Region us-east-2

--- a/terraform/ansible_templates/inventory_aws/tf_aws_ec2.yml
+++ b/terraform/ansible_templates/inventory_aws/tf_aws_ec2.yml
@@ -5,7 +5,7 @@ plugin: aws_ec2
 regions:
   - ap-south-1
   - us-west-2
-# - us-east-2
+  - us-east-2
 # set strict to False
 # if True this will make invalid entries
 # a fatal error
@@ -46,4 +46,3 @@ hostnames:
   - ip-address
   - dns-name
   - tag:Name
-
