Added ansible dynamic conf

--- a/terraform/ansible.cfg
+++ b/terraform/ansible.cfg
@@ -11,7 +11,7 @@
 # documentation: https://docs.ansible.com/ansible/latest/reference_appendices/config.html.
 
 [defaults]
-inventory       = ./ansible_templates/inventory_aws/tf_aws_ec2.yml
+inventory       = ./ansible_templates/inventory_aws/ec2.ini
 enable_plugins = aws_ec2
 interpreter_python = auto_silent
 #library         = ~/.ansible/plugins/modules:/usr/share/ansible/plugins/modules
