--- a/terraform/ansible_templates/install_jenkins.yaml
+++ b/terraform/ansible_templates/install_jenkins.yaml
@@ -1,5 +1,5 @@
 ---
-- hosts: jenkins_server
+- hosts: "{{ passed_in_hosts }}"
   become: yes
   remote_user: ec2-user
   become_user: root
@@ -10,48 +10,47 @@
         state: present
       vars:
         package:
-        - wget
-        - java-1.8.0-openjdk-devel
-        - git
-        - vim
-      
+          - wget
+          - java-1.8.0-openjdk-devel
+          - git
+          - vim
+
     - name: clone repo
       git:
-        repo: https://github.com/sumitpatankar/content-jenkins-backup.git 
+        repo: https://github.com/sumitpatankar/content-jenkins-backup.git
         dest: /tmp/jenkins
 
     - name: Setup Jenkins Repo
       get_url:
         url: https://pkg.jenkins.io/redhat/jenkins.repo
         dest: /etc/yum.repos.d/jenkins.repo
-    
+
     - name: Import Jenkins Repo GPG key
       rpm_key:
         state: present
         key: https://pkg.jenkins.io/redhat/jenkins.io.key
- 
+
     - name: install Jenkins
       yum:
         name: jenkins
         state: present
 
     - name: Temporarily Stop Jenkins
-      service: 
-        name: jenkins 
+      service:
+        name: jenkins
         state: stopped
-   
+
     - name: Delete Jenkins default dir
       file:
         state: absent
         path: /var/lib/jenkins
-    
+
     - name: Copy over cloned Jenkins /var/lib/jenkins
       copy:
         remote_src: yes
         src: /tmp/jenkins/jenkins
         dest: /var/lib
-        
-         
+
     - name: Restore jenkins user ownership on /var/lib/jenkins
       file:
         path: /var/lib/jenkins
@@ -69,4 +68,3 @@
       shell: result_first=1; while [[ $result_first != 0 ]]; do if [[ `grep 'Jenkins is fully up and running' /var/log/jenkins/jenkins.log` ]];then result_first=0;else sleep 4;fi;done
       register: result
       until: result.rc == 0
-
