--- a/terraform/ansible.cfg
+++ b/terraform/ansible.cfg
@@ -11,7 +11,7 @@
 # documentation: https://docs.ansible.com/ansible/latest/reference_appendices/config.html.
 
 [defaults]
-inventory       = ./ansible_templates/inventory_aws/ec2.ini
+inventory = ./ansible_templates/inventory_aws/tf_aws_ec2.yml
 enable_plugins = aws_ec2
 interpreter_python = auto_silent
 #library         = ~/.ansible/plugins/modules:/usr/share/ansible/plugins/modules
@@ -76,7 +76,6 @@ host_key_checking = False
 #stdout_callback = default
 #stdout_callback = yaml
 #stdout_callback = debug
-
 
 # Ansible ships with some plugins that require whitelisting,
 # this is done to avoid running all of a type by default.
@@ -196,7 +195,6 @@ deprecation_warnings = False
 #
 command_warnings = False
 
-
 # set plugin path directories here, separate with colons
 #action_plugins     = /usr/share/ansible/plugins/action
 #become_plugins     = /usr/share/ansible/plugins/become
@@ -211,7 +209,6 @@ command_warnings = False
 #terminal_plugins   = /usr/share/ansible/plugins/terminal
 #strategy_plugins   = /usr/share/ansible/plugins/strategy
 
-
 # Ansible will use the 'linear' strategy but you may want to try another one.
 #strategy = linear
 
@@ -220,7 +217,6 @@ command_warnings = False
 # /bin/ansible runs
 #
 #bin_ansible_callbacks = False
-
 
 # Don't like cows?  that's unfortunate.
 # set to 1 if you don't want cowsay support or export ANSIBLE_NOCOWS=1
@@ -322,7 +318,6 @@ command_warnings = False
 # set default errors for all plays
 #any_errors_fatal = False
 
-
 [inventory]
 # List of enabled inventory plugins and the order in which they are used.
 #enable_plugins = host_list, script, auto, yaml, ini, toml
@@ -336,12 +331,10 @@ command_warnings = False
 # If 'True' unparsed inventory sources become fatal errors, otherwise they are warnings.
 #unparsed_is_failed = False
 
-
 [privilege_escalation]
 #become = False
 #become_method = sudo
 #become_ask_pass = False
-
 
 ## Connection Plugins ##
 
@@ -372,7 +365,6 @@ command_warnings = False
 # running in background processes to fail. Uncomment this line to have
 # Paramiko automatically add host keys.
 #host_key_auto_add = True
-
 
 [ssh_connection]
 # ssh arguments to use
@@ -434,7 +426,6 @@ command_warnings = False
 # so after the first attempt there is 1s wait, then 2s, 4s etc. up to 30s (max).
 #retries = 3
 
-
 [persistent_connection]
 # Configures the persistent connection timeout value in seconds. This value is
 # how long the persistent connection will remain idle before it is destroyed.
@@ -448,7 +439,6 @@ command_warnings = False
 # The default value is 30 second.
 #command_timeout = 30
 
-
 ## Become Plugins ##
 
 # Settings for become plugins go under a section named '[[plugin_name]_become_plugin]'
@@ -460,7 +450,6 @@ command_warnings = False
 #flags = -H -S -n
 #user = root
 
-
 [selinux]
 # file systems that require special treatment when dealing with security context
 # the default behaviour that copies the existing context or uses the user default
@@ -469,7 +458,6 @@ command_warnings = False
 
 # Set this to True to allow libvirt_lxc connections to work without SELinux.
 #libvirt_lxc_noseclabel = False
-
 
 [colors]
 #highlight = white
@@ -486,11 +474,9 @@ command_warnings = False
 #diff_remove = red
 #diff_lines = cyan
 
-
 [diff]
 # Always print diff when running ( same as always running with -D/--diff )
 #always = False
 
 # Set how many context lines to show in diff
 #context = 3
-
