--- a/terraform/ansible_templates/inventory_aws/tf_aws_ec2.yml
+++ b/terraform/ansible_templates/inventory_aws/tf_aws_ec2.yml
@@ -3,8 +3,8 @@
 plugin: aws_ec2
 
 regions:
-  - ap-south-1
-  - us-west-2
+  #- ap-south-1
+  #- us-west-2
   - us-east-2
 # set strict to False
 # if True this will make invalid entries
