Added   #- ap-south-1

--- a/terraform/ansible.cfg
+++ b/terraform/ansible.cfg
@@ -320,6 +320,7 @@ command_warnings = False
 
 [inventory]
 # List of enabled inventory plugins and the order in which they are used.
+enable_plugins = aws_ec2
 #enable_plugins = host_list, script, auto, yaml, ini, toml
 
 # Ignore these extensions when parsing a directory as inventory source
